--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
+[build]
+  command = "npm run build"
+  publish = "build"
+ 
 [template.environment]
   GITHUB_TOKEN = "change me to your secret token"
